--- a/DZ3.ipynb
+++ b/DZ3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89ca016a",
+   "id": "1807770f",
    "metadata": {},
    "source": [
     "### Задание 1\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "db75235f",
+   "id": "a1cfb564",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "e67d237a",
+   "id": "62bcfffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "e22e8963",
+   "id": "c66cba16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "3d37c813",
+   "id": "43abb9d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "3f315e92",
+   "id": "1ae07100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "be3296e1",
+   "id": "868936b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "e1f8e3b8",
+   "id": "952368ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "e51b5fc7",
+   "id": "a5d95b7f",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "4fb7e493",
+   "id": "94359865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "a2a404ba",
+   "id": "5d000417",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "992116df",
+   "id": "16e83671",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26e3ff52",
+   "id": "9e636e56",
    "metadata": {},
    "source": [
     "### Задание 2\n",
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "6b55a536",
+   "id": "e7a762eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "1791667b",
+   "id": "5729acf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "59678af4",
+   "id": "ea7369e8",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "4ff939ca",
+   "id": "a01c9049",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "c224e562",
+   "id": "1ca58e8e",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "2875be77",
+   "id": "d84f99a2",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "c0be692e",
+   "id": "54b53951",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19a1f440",
+   "id": "10efeae9",
    "metadata": {},
    "source": [
     "### *Задание 3\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "d5427880",
+   "id": "945dc1df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "c7d7a25b",
+   "id": "2edd3f16",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "c59c50aa",
+   "id": "67127200",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "3a481659",
+   "id": "567b5312",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "6e51cbca",
+   "id": "379e5d1f",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ad2bd5",
+   "id": "19aa0963",
    "metadata": {},
    "source": [
     "### *Задание 4\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "79986bbe",
+   "id": "4431b13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "1822c080",
+   "id": "ee58b202",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "65998506",
+   "id": "a5b93153",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "7d10e89e",
+   "id": "82a90b73",
    "metadata": {},
    "outputs": [
     {
@@ -994,19 +994,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "a33b669f",
+   "execution_count": 191,
+   "id": "b3b1ecd4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-188-352f6769a342>:2: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  df.isnull().astype(np.int).sum().astype(np.int_)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1044,20 +1035,20 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#и нет ли в них пропусков\n",
-    "df.isnull().astype(np.int).sum().astype(np.int_)"
+    "df.isnull().astype(np.int_).sum().astype(np.int_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "0b7bc2ec",
+   "id": "1b046c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "af7bac98",
+   "id": "f900570d",
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "7a7acc60",
+   "id": "a0d3b63a",
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "9aaa861b",
+   "id": "08d63e54",
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "f7c7d963",
+   "id": "7f0f561e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "e5bdf083",
+   "id": "7eafb9c2",
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "c1e3d215",
+   "id": "96da9b93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1902,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "c5b11c91",
+   "id": "1b3f57eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "61094bbe",
+   "id": "fc1d8d17",
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "836bfb45",
+   "id": "11d2f5c0",
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "c7b0798e",
+   "id": "3c9cf974",
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "349a503d",
+   "id": "3d592ffb",
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "d06c1b01",
+   "id": "f8b5f0ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "78ff35a5",
+   "id": "32cce9a6",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da3aebb7",
+   "id": "fbce1387",
    "metadata": {},
    "outputs": [],
    "source": []
